Added  Memory :: FindPattern static class

--- a/NativeHashFunctionFinder/NativeHashFunctionFinder.vcxproj
+++ b/NativeHashFunctionFinder/NativeHashFunctionFinder.vcxproj
@@ -104,6 +104,7 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
+      <AdditionalIncludeDirectories>C:\Users\sfink\OneDrive\Documents\Visual Studio 2015\Projects\NativeHashFunctionFinder\MemoryLib;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -142,7 +143,7 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
-      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
+      <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <PrecompiledHeaderFile />
       <PrecompiledHeaderOutputFile />
     </ClCompile>
@@ -197,6 +198,11 @@
   <ItemGroup>
     <Library Include="Libraries\distorm\distorm.lib" />
     <Library Include="Libraries\distorm\distorm3.lib" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MemoryLib\MemoryLib.vcxproj">
+      <Project>{2ce3c4b0-e952-4328-9bb8-ffd16af1dcf5}</Project>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
